# agent-console

./: CLEANING_COMMITS.md  README.md  clean-commit-messages.sh  install-hooks.sh  package.json  playwright.config.ts  vitest.config.ts
.github/workflows/: test.yml
e2e/: main-window.spec.ts  project-detail.spec.ts
e2e/fixtures/: setup.ts
hooks/: README.md  commit-msg
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: claude_code.rs  lib.rs  process.rs  search.rs  terminal.rs  watcher.rs
src/components/: theme-provider.test.tsx
src/components/ui/: badge.test.tsx  button.test.tsx  card.test.tsx  tooltip.test.tsx
src/lib/: types.ts  use-active-sessions.test.ts  use-projects.test.ts  use-session-index.test.ts  utils.test.ts
src/pages/: sessions.test.tsx  settings.test.tsx
src/pages/project-detail/: index.test.tsx  index.tsx  types.ts  utils.test.tsx  utils.tsx
src/pages/project-detail/components/: edit-context.tsx  edit-viewer.test.tsx  event-log-viewer.test.tsx  event-log-viewer.tsx  event-row.test.tsx  json-viewer.test.tsx
src/test/: setup.ts
src/test/mocks/: monaco.ts  react-window.ts  tauri.ts
