[package]
name = "agent-console"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agent_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
notify = "6"
notify-debouncer-mini = "0.4"
git2 = "0.20"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
uuid = { version = "1", features = ["v4"] }

# Benchmarks can be added later:
# criterion = { version = "0.5", features = ["html_reports"] }
# [[bench]]
# name = "bench_session_parsing"
# harness = false
